--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -37,6 +37,10 @@
               <a href="https://{{ site.medium_username }}"><button class="btn btn-default btn-lg"><i class="fa fa-medium fa-lg"></i>Medium</button></a>
             {% endif %}
 
+            {% if site.linkedin_username != '' %}
+              <a href="https://{{ site.linkedin_username }}"><button class="btn btn-default btn-lg"><i class="fa fa-medium fa-lg"></i>LinkedIn</button></a>
+            {% endif %}
+
           </div>
 
         </div>
