--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -32,7 +32,7 @@
             {% endif %}
 
             {% if site.linkedin_username != '' %}
-              <a href="https://linkedin.com/in/{{ site.linkedin_username }}"><button class="btn btn-default btn-lg"><i class="fa fa-medium fa-lg"></i>LinkedIn</button></a>
+              <a href="https://linkedin.com/in/{{ site.linkedin_username }}"><button class="btn btn-default btn-lg"><i class="fab fa-linkedin-in"></i>LinkedIn</button></a>
             {% endif %}
 
           </div>
